public/css/style.css
.container.intro {
    width: 55%;
    margin: 0 auto;
    display: flex;
}


.partner-images {
    width: 80%;
    margin: 0 auto;
}

section.footer {
    width: 55%;
    margin: 0 auto;
}

.contact {
    margin-top: 20px;
    font-size: 12px;
}

footer.blockquote-footer {
    margin-top: 15px;
    border: 0px;
}

.container.partners {
    width: 55%;
    background: #fff;
    text-align: center;
    height: 220px;
    border-radius: 15px;
    margin-top: 50px;
    margin-bottom: 50px;
}

.slideshow-content {
    display: flex;
    width: 60%;
    margin: 0 auto;
}

.container.partners img {
    margin-left: 80px;
    width: 90px;
}

.container.slideshow h2 {
    margin-bottom: 60px;
}

.slideshow-content img {
    margin-right: 40px;
    width: 150px;
    margin-top: -26px;
    height: 150px;
    border-radius: 50%;
}

.container.abel h2 {
    border-bottom: 5px solid #E88421;
    padding-bottom: 10px;
}

.footer-components h3 {
    margin-bottom: 20px;
    font-size: large;
}

section.slideshow {
    height: 300px;
}

footer {
    border-top: 8px solid #e88421;
}

.container.slideshow  {
   margin-top: 30px;
   /* width: 55%; */
}

.container.slideshow h2 {
    text-align: -webkit-center;
}


.container.partners h2 {
 padding-top: 20px;
 margin-bottom: 35px;
 font-family: 'Concert One';
}

h1,h2,h3,h4,.table thead th,div#headingTitle {
    font-family: 'Concert One';
}

div#accordion button {
    color: #000;
}

.result-explanation .nav-link {font-family: 'Concert One';color: #000;font-size: 20px;}

.home-info button.btn.btn-primary:hover {
    border-color: #04549a;
    color: #e88421;
}

.container {
    width: 55%;
    margin: 0 auto;
    margin-bottom: 50px;
    overflow: auto;
}

section.partners {
    background: #f4eee9;
    overflow:auto;
}

.intro-text {
    padding-right: 47px;
}

.container.intro p {
    font-size: 20px;
}


.container.intro img {
    width: 250px;
    margin-top: 50px;
}

.footer-components ul {
    /* width: 24%; */
}

.btn.btn-primary {
    font-weight: bold;
}

.home-info button.btn.btn-primary {background: #fff;height: 50px;font-weight: bold;color: #04549A;border: 1.5px solid #E88421;width: 185px;}

.contact-info button.btn.btn-primary {background: #E88421;height: 50px;font-weight: bold;color: #fff;border: 1.5px solid #04549A ;width: 185px;}

.container.intro button {height: 50px;width: 235px;}

b {
    display: inline-block;
}

section.home-info {background-color: #F3EEE9;min-height: 401px;margin-top: 90px;}


.home-info h5.card-title {font-family: 'Concert One', cursive;margin-bottom: 30px;}


.home-info h2.card-title {
    margin-bottom: 30px;
    font-size: 20px;
}

.container.abel {
    width: 55%;
    margin-top: 50px;
    display: flex;
}

a.navbar-brand {
    color: #0f5599;
}

.reference-text {
    width: 55%;
}

.navbar-light .navbar-brand {
    color: #0f5599;
}


.footer-components ul:nth-child(2),.footer-components ul:nth-child(3) {
  width: 21%;
}

.footer-components ul:nth-child(1) {
}

.footer-components ul:nth-child(4) {
    width: 35%;
}

.subfooter  ul li:nth-child(4){
    border:0px;
}
.intro a.btn.btn-primary {color: #fff;}

.subfooter ul li {display: inline-flex;border-right: 1px solid black;padding: 5px;}

div#socialMedia {
    display: flex;
}

.subfooter {
    margin: 0 auto;
    width: 60%;
}

.iconTel {
    background: url('../img/phone.png');
    height:20px;
    width: 20px;
    background-size: contain;
    background-repeat: no-repeat;
    display: block;
}

.iconMail {
    background: url('../img/mail.png');
    height: 20px;
    width: 20px;
    background-size: contain;
    background-repeat: no-repeat;
    display: block;
}

.iconig {
    background: url('../img/instagram.png');
    height: 20px;
    width: 20px;
    background-size: contain;
    background-repeat: no-repeat;
    display: block;
}

.iconfb {
    background: url('../img/facebook.png');
    height: 20px;
    width: 20px;
    background-size: contain;
    background-repeat: no-repeat;
    display: block;
}



.icontwitter {
    background: url('../img/twitter.png');
    height: 20px;
    background-size: contain;
    background-repeat: no-repeat;
    width: 20px;
    display: block;
}


.info-contact .iconMap {
    height: 30px;
    width: 30px;
}

.info-contact .footer-components {
    padding-top: 18px;
}

.footer-components span {
    margin-right: 21px;
    margin-bottom: 18px;
}

.info-contact .footer-components span {
    margin-right: 12px;
}

.footer-components ul {
}


.info-contact {
    font-size: 18px;
    width: 63%;
}

.info-contact h1 {
    margin-bottom: 20px;
}

.container.contacts {
    padding-top: 80px;
    display: flex;
}


.iconMap {
    background: url('../img/location.png');
    height: 20px;
    width: 20px;
    background-size: contain;
    background-repeat: no-repeat;
    display: block;
}



.footer-components button {
    border-radius: 0px;
}

.footer-components a {
    text-decoration: underline;
}

.home section .container.abel p {
    width: 87%;
    font-size: 20px;
}
.home section .container.abel h2 {
    font-family: 'Concert One';
    margin-bottom: 25px;
}

.home section h1 {
    font-family: 'Concert One', cursive;
    border-bottom:5px solid #E88421;
    padding-bottom: 15px;
    padding-top: 45px;
    font-size: 47px;
    margin-bottom: 20px;
}

.footer-components {
    display: flex;
}
ul li {
    list-style-type: none;
}

.footer-components>ul>li {text-decoration: none;display: flex;margin-bottom: 5px;}

nav {


}

a.navbar-brand {
    font-family: 'Concert One', cursive;
}


.navbar-expand-lg .navbar-collapse {
    height: 50px;
}

.navbar-light .navbar-nav .nav-item.checker {
    font-weight: bold;
    background: #04549a;
    line-height: 5px;
    height: 52px;
    margin: 10px;
    border-radius: 10px;
}
.navbar-light .navbar-nav .nav-item.checker .nav-link:hover {
    border-bottom:0px;
}

.navbar-light .navbar-nav .nav-item.checker .nav-link {
    color: #fff;
}
/* ... */

